manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tan-dara5304-dara-nextjs-ingress
  namespace: tan-dara5304-dara-nextjs
  annotation:
spec:
  ingressClassName: nginx
  rules:
  - host: pipejet-v1.tinhlgkiddy.fun
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: tan-dara5304-dara-nextjs-service 
            port:
              number: 8233
